--- a/chi2012.tex
+++ b/chi2012.tex
@@ -69,24 +69,24 @@ breaklinks=true,
 
 \title{Carp\'{e} Data: Supporting Serendipitous Data Integration in Personal Information Management}
 
-\numberofauthors{3}
-\author{
-  \alignauthor 1st Author Name\\
-    \affaddr{Affiliation}\\
-    \affaddr{Address}\\
-    \email{e-mail address}\\
-    \affaddr{Optional phone number}
-  \alignauthor 2nd Author Name\\
-    \affaddr{Affiliation}\\
-    \affaddr{Address}\\
-    \email{e-mail address}\\
-    \affaddr{Optional phone number}    
-  \alignauthor 3rd Author Name\\
-    \affaddr{Affiliation}\\
-    \affaddr{Address}\\
-    \email{e-mail address}\\
-    \affaddr{Optional phone number}
-}
+%% \numberofauthors{0}
+%% \author{
+%%   \alignauthor 1st Author Name\\
+%%     \affaddr{Affiliation}\\
+%%     \affaddr{Address}\\
+%%     \email{e-mail address}\\
+%%     \affaddr{Optional phone number}
+%%   \alignauthor 2nd Author Name\\
+%%     \affaddr{Affiliation}\\
+%%     \affaddr{Address}\\
+%%     \email{e-mail address}\\
+%%     \affaddr{Optional phone number}    
+%%   \alignauthor 3rd Author Name\\
+%%     \affaddr{Affiliation}\\
+%%     \affaddr{Address}\\
+%%     \email{e-mail address}\\
+%%     \affaddr{Optional phone number}
+%% }
 
 % Teaser figure can go here
 %\teaser{
@@ -126,7 +126,7 @@ Third, we developed DataPalette, an interface that enables serendipitous ``data 
 In this section, we motivate our work using three fields: PIM, data integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, where consolidating and working with data from multiple sources has remained a challenge for over a decade. Enabling PIM tools to supporting ad-hoc data integration has remained difficult because of the complex, theoretically difficult nature of data heterogeneity; specifically, reconciling the differences that arise among representations when data is created by different people, at different times, for different purposes. As described by Alon Halvey:
 
 \begin{quote} 
-  The problem stems from the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{alonhalevy}.\looseness=-1
+  The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{alonhalevy}.\looseness=-1
 \end{quote}
 
 Recently, users are experiencing data fragmentation~\cite{Jones05towardsa} across multiple web-based applications and services, and struggle to consolidate across them~\cite{bergman,boardmansasse}.  In our own previously-conducted field study, (reference anonymised) we observed variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) to allow people to manage both online and offline data.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-maintained information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate their activities \cite{Voida:2011:HDC:1978942.1979078}.
@@ -181,18 +181,25 @@ The second pre-study focused on the characteristics of the data available from t
 We designed a semi-structured interview about tasks people performed online that required the use of multiple websites, and the processes people used to perform such tasks.  We analysed the data collected from this study using a thematic approach.  In our pre-study, we investigated the types of tasks people performed online that required heterogeneous data sources, and which tools they would use to organise a social event involving around 15 people.  We planned to interview 8 participants, using a general interview guide approach based on a set of questions.  This approach allowed the interviewer to adapt the interview to the participant's experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained in the purpose of the study and to minimise bias.
 
 \subsubsection{Results - Heterogeneous Data Tasks}
-The participant demographic consisted of 8 people (7 male and 1 female). They were split evenly into two age groups of 18-25 and 26-32.  
+The participants, recruited informally via word of mouth, consisted of 7 male and 1 female. They were split evenly into two age groups of 18-25 and 26-32.   
+% mention # that were computer scientists here?
 
+% not so relevant:
 % All but one participant reported they used social network sites very regularly (many times a day); they said they either logged in multiple times a day, left a website page open or used dedicated application for their social networking site updates.  Those that used social networking websites primarily used Facebook.  All of the participants used Twitter to listen to broadcasted tweets, and 6 out of 8 people regularly tweeted.  The following two sections, describe the tasks people perform online with heterogeneous data and how they would use to organise a large social event.
 % \subsubsection{Question 1: Heterogenous Data Tasks}
 All participants regularly using multiple websites to accomplish tasks.  Example of such tasks included shopping (including food, consumer electronics, hotels and flights), choosing restaurants, searching for jobs, selecting a university, seeking recipes, and finding answers to technical problems.  The biggest focus for shopping focused tasks was balancing price, quality and speed of delivery.  In general, people did not not trust single websites for reviews because they said that they could be biased and did not always review the features they were interested in.  One participant said that video reviews of items were really important because they showed the aesthetics and scale of the item.  In general, for initial research into organising a task, it was typical to use Google to search for several related websites.  They identified that they used different websites for different jobs, such as manufacturers website for technical details, review aggregators for a range of opinions, and Google maps for location-based decisions.  Social networks were also identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
 
 \subsubsection{Question 2: Process Used to Organise a Large Social Event}
-All of the participants would organise a large social event by talking to their friends, about their ideas, preferences and recommendations.  The tools they would use to acquire this information included face-to-face, phone calls, email, Skype, Facebook events.  The method chosen depended on the time scale required to organise an event, in general if there was a short time scale people would speak in person or on the phone.  Otherwise, people would set up a Facebook event page to discuss ideas with their friends.  If their friends were not on Facebook they would email them.  All but one participant said they would not use Doodle\footnote{Doodle - \emph{www.doodle.com}} to the organise day and time of an event, because they felt that people did not fill in the form and it was more suit to organising work events.  
+Participants said they would organise a large social event by first conferring with friends about their ideas, preferences and recommendations.  They selected venues, locations, restaurants and activities through a number of sources: their own prior experience, friends' recommendations, searching Google maps, dedicated reviews sites (such as Yelp for restaurants), and through web search.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event, the weather was not that important because they did not trust the accuracy of predictions.  Also, friends' preferences in price and food choices were not seen a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
 
-Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend's recommendations, Google maps, reviews obtained through web search and sites such as TripAdvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event the weather was not that important because they did not trust the accuracy of predictions.  Also, their friend's preferences in price and food choices were not a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
+%% Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend's recommendations, Google maps, reviews obtained through web search and sites such as TripAdvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event the weather was not that important because they did not trust the accuracy of predictions.  Also, their friend's preferences in price and food choices were not a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
+% previous
+% All of the participants would organise a large social event by first conferring with friends about their ideas, preferences and recommendations.  The medium they would use included face-to-face, phone calls, email, Skype, Facebook events, depending on the time scale required to organise an event in general if there was a short time scale people would speak in person or on the phone.  Otherwise, people would set up a Facebook event page to discuss ideas with their friends.  If their friends were not on Facebook they would email them.  All but one participant said they would not use Doodle\footnote{Doodle - \emph{www.doodle.com}} to the organise day and time of an event, because they felt that people did not fill in the form and it was more suit to organising work events.  
+
+%% Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend's recommendations, Google maps, reviews obtained through web search and sites such as TripAdvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event the weather was not that important because they did not trust the accuracy of predictions.  Also, their friend's preferences in price and food choices were not a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
 
 \subsubsection{Summary of Findings}
+% TODO: how does this summary support the thesis of the paper?
 People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time.  Three participants said that they would like a recommendation system for places to eat and activities.  Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment.
 
 \begin{table*}
@@ -232,16 +239,19 @@ weather			& weatherbug		& 8						& 2						& wu: 5, y: 5		& wu: 5, y: 5				& wu: 
 
 
 \subsection{PS.2 - Technical Challenges of Data Integration}
-Our investigation of integration challenges of available structured data feeds started with identifying a set of candidate sources to examine.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  To increase the variety of sources, we first categorised sources into 5 topic categories: social network services, retailers, event sources (e.g., online calendars and event sites) music, and weather, and selected 2-5 sources from each 2-5 feeds each for a total of 20 total feeds for analysis.  
+Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To increase the variety of sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2-5 sources from each, for a total of 20.  
 
-For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for music sites this was song info, etc.  Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  For each obtained data record, two simple complexity metrics were computed: an \emph{average width} and \emph{average depth} of record.  For determining the width, we first examined the record to find the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record had few attributes about the actual product compared to its ``ItemAttributes'' sub-property, which was used instead. Thus, all comparisons were made to maximize comparative similarity.  
+For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for music sites this was song info, etc.  
+%Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  
+For each such data record, two simple complexity metrics were computed: an \emph{average width} and \emph{average depth} of record.  Determining the width required first finding the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record had few attributes about the actual product compared to its ``ItemAttributes'' sub-property, which was used instead. 
+% This step was done manually, with an effort to select most similar components for comparison.  
 % Depth was computed as the average number of levels from record root to leaves across all properties, and was measured, with width, to convey the overall size/complexity of each record.
 
 The third metric measured the amount of overlap among the sources in each category.  This was done by determining \emph{equivalent properties} between schemas, which we did manually by creating an alignment table for all properties across all data sources in each category.  Each row of the alignment table comprised a property of a record from one data source, and all its closest matching properties from the others.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions; two properties were aligned if they seemed to model the same piece of information.
 
-Once the equivalent properties were established, we counted the properties that were terminologically inconsistent, that is, named differently between records.   Then, ignoring property name, we looked to see if its values were structurally comparable.  If two fields were of the same data type and, if complex, had equivalent subfields, they were considered comparable; otherwise they were considered \emph{structurally inconsistent}.  An example of such a structural inconsistency were``birthday'' fields in Facebook and LinkedIn; Facebook represented it as a single string formatted ``MM/DD/YYYY'', while LinkedIn represented it as a sub-structure with separate ``Month'', ``Day'' and ``Year'' subfields.  
+Once the equivalent properties were established, equivalent properties were examined to see if they were named identically.  Then, ignoring property name, we looked to see if its values were structurally comparable.  If two fields were of the same data type and, if complex, had equivalent subfields, they were considered comparable; otherwise they were considered \emph{structurally inconsistent}.  An example of such a structural inconsistency were``birthday'' fields in Facebook and LinkedIn; Facebook represented it as a single string formatted ``MM/DD/YYYY'', while LinkedIn represented it as a sub-structure with separate ``Month'', ``Day'' and ``Year'' subfields.  
 
-Finally, we looked at fields that were equivalent, yet could not be compared for reasons other than the two reasons above.  These \emph{modelling differences} were had a variety of causes, including, but not limited to, the following: measurement unit inconsistencies, measurement method (e.g., dewpoint vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').
+Finally, we examined fields that were equivalent but not be compared for reasons other than the structural or terminological reasons just described.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to, the following: measurement unit inconsistencies, measurement method (e.g., dewpoint vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').
 
 \subsubsection{Results}
 Table \ref{tbl:prestudy2} displays the raw results of the process just described.  A number of features were quite striking about the data. First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest; in particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories. 
