--- a/chi2012.tex
+++ b/chi2012.tex
@@ -281,7 +281,7 @@ Although not included in the table above, we also examined the source schemas of
 In summary, while data records ranged in complexity, no data source subsumed the rest; all contained properties that other sources did not have.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, although simpler kinds of structural heterogeneity (pertaining to representing substructures of values) were also common.
 
 %\section{Designing the DataPalette Interface}
-\section{Designing DataPalette : An Interface for Serendipitous Data Mixing}
+\section{DataPalette : An Interface for Data Mixing}
 
 \begin{figure*}[tbp]
 \begin{center}
@@ -295,11 +295,10 @@ At a high level, the overall goal of DataPalette was to empower end-users to mix
 
 The two pre-studies provided valuable insight towards this goal that allowed us to guide our design process. PS.1 confirmed the need for data integration by showing that people did, in fact, prefer to rely upon multiple sources of information for making important decisions, and identified the kinds of sources people most commonly used.  PS.2, meanwhile, revealed that the most common kinds of heterogeneity across data feeds available today were the simpler kinds---terminological and simpler structural heterogeneity--- than the semantic/modelling variety. This gave us optimism that an interactional approach optimised around the these simpler kinds of heterogeneity would be effective.  In the following sections we describe the design process we used to create prototype DataPalette, followed by a detailed description of the design of the prototype and justification.
 
-\subsection{Process}
+\subsection{Design Process}
 We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with the mechanisms for facilitating the various aspects of effective data mixing that we describe in the next section. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by expert colleagues (and in later iterations, non-expert potential users), who provided critiques of the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
-\subsection{Interaction with DataPalette}
-In order to feel familiar to new users and focus our design efforts on integration-related aspects of the interface, we borrowed metaphors and interactions directly from MacOS Finder-style file managers.  Specifically, in the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can arbitrarily drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. (Although the design could be generalised to supporting nested groups, our prototype only supported a single level of grouping.)
+In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from MacOS Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can arbitrarily drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. (Although the design could be generalised to supporting nested groups, our prototype only supported a single level of grouping.)
 
 Unlike file managers, the basic unit of data is not a file, but an \emph{instance} - corresponding to an RDF instance or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data) into discrete instances with properties; for JSON or XML data feeds, we represented all subtrees with more than 1 child as its an instance.  
 
